--- a/ui/style.css
+++ b/ui/style.css
@@ -2,6 +2,8 @@ body {
     font-family: sans-serif;
     background-color:grey;
     margin-top: 75px;
+    margin-left:50px;
+    margin-right:50px;
 }
 
 .center {
