[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: sans-serif;
+    font-family: lithograph-light;
     background-color:grey;
     margin-top: 75px;
     margin-left:50px;
