[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: lithograph-light;
+    font:back slash;
     background-color:grey;
     margin-top: 75px;
     margin-left:50px;
